force-app/main/default/objects/Purchase_Order_Line__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>Computed line total based on quantity and unit price.</description>
    <formula>BLANKVALUE(Quantity__c, 0) * BLANKVALUE(Unit_Price__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>