force-app/main/default/objects/Purchase_Order_Line__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Units ordered for this line item.</description>
    <label>Quantity</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>