force-app/main/default/objects/Purchase_Order_Line__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>Supplier stock keeping unit identifier.</description>
    <label>SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>