force-app/main/default/objects/Purchase_Order_Line__c/validationRules/Positive_Quantity.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Quantity must be positive.</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>