force-app/main/default/objects/Purchase_Order_Line__c/listViews/All_Lines.listView-meta.xml
<ListView>
    <filterScope>Everything</filterScope>
    <label>All Lines</label>
</ListView>